--- a/server/djangoapp/templates/djangoapp/contact.html
+++ b/server/djangoapp/templates/djangoapp/contact.html
@@ -2,12 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Dealership Review</title>
-    {% load static %}
+    <title>Dealership Review - Contact</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link
+      href="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.js"></script>
+    <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
   </head>
 
   <body class="vh-100">
@@ -36,14 +44,13 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'djangoapp:about' %}">About</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="{% url 'djangoapp:contact' %}">Contact</a>
           </li>
         </ul>
         {% if user.is_authenticated %}
         <div class="ml-auto">
           <span class="mr-2">{{ user.first_name }}({{ user.username }})</span>
-          <a class="btn btn-link" method= "GET" href="{% url 'djangoapp:add_review' dealer.id %}">Add review</a>
           <a href="{% url 'djangoapp:logout' %}">Log out</a>
         </div>
         {% else %}
@@ -79,69 +86,17 @@
         {% endif %}
       </div>
     </nav>
-
     <div class="container mt-5">
-      <div class="rows">
-        <div class="col-md mb-5">
-          <h3>Reviews for <strong>{{ dealer.full_name }}</strong></h3>
-        </div>
-        <div class="col-md">
-          {% if reviews %}
-          <div class="card-columns">
-            {% for review in reviews %}
-            <div class="card">
-              {% if review.sentiment == 'positive' %}
-              <img
-                class="card-img-left"
-                src="{{MEDIA_URL}}/emoji/positive.png"
-                style="width: 30px; height: 30px"
-              />
-              {% endif %} {% if review.sentiment == 'neutral' %}
-              <img
-                class="card-img-left"
-                src="{{MEDIA_URL}}/emoji/neutral.png"
-                style="width: 30px; height: 30px"
-              />
-              {% endif %} {% if review.sentiment == 'negative' %}
-              <img
-                class="card-img-left"
-                src="{{MEDIA_URL}}/emoji/negative.png"
-                style="width: 30px; height: 30px"
-              />
-              {% endif %}
-
-              <div class="card-body bg-light">
-                {% if review.car_make %}
-                <h5 class="card-title">{{review.car_make}}, {{review.car_model}}</h5>
-                <h5 class="card-title">{{review.car_year}}</h5>
-                {% else %} 
-                <h5 class="card-title">Reviewer did not buy any car.</h5>
-                <h5 class="card-title" style="color: #f8f9fa;">.</h5>
-                {% endif %}
-                </h5>
-                <label class="card-title">{{review.review}} </label>
-              </div>
-            </div>
-          {% endfor %}
-          {% else %}
-          <div class="card-columns">
-            <div class="card">
-              <div class="card-body bg-light">
-                <h5 class="card-title">No reviews yet</h5>
-                <a class="btn btn-link" method= "GET" href="{% url 'djangoapp:add_review' dealer.id %}">Be first to add a review?</a>
-              </div>
-            </div>
-          </div>
-          {% endif %}
-          </div>
-        </div>
+      <div class="col-md-4">
+        <address>
+          <strong>Dealership Review Inc.</strong><br />
+          1234 Example Street<br />
+          Antartica, Example 0987<br />
+          <a href="mailto:#">exam.ple@example.com</a>
+        </address>
       </div>
-      {% if reviews %}
-      <div style="min-height: 560px"></div>
-      {% else %}
-      <div style="min-height: 625px"></div>
-      {% endif %}
     </div>
+    <div style="min-height: 725px"></div>
     <footer class="bg-light text-center text-lg-start mt-5">
       <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
         © 2022
