--- a/server/djangoapp/templates/djangoapp/about.html
+++ b/server/djangoapp/templates/djangoapp/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Dealership Review - About</title>
+    <title>About us</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -89,7 +89,7 @@
       <h1 class="text-center mb-5">
         Welcome to Best Cars dealership, home to the best cars in North America.
         <br />
-        We sell domestic and imported cars at reasonable prices.
+        We sell amazing cars
       </h1>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -109,7 +109,7 @@
     </div>
     <footer class="bg-light text-center text-lg-start mt-5">
       <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-        © 2022
+        © 2023
         <a class="text-dark" href="{% url 'djangoapp:index' %}"
           >Dealership Review</a
         >
